<resources>
    <string name="app_name">DiagnoSkin</string>
    <string name="LO_hintEditTextUsuario">Nombre de usuario</string>
    <string name="LO_hintEditTextClave">Contraseña</string>
    <string name="LO_switchMostrarClave">Mostrar contraseña</string>
    <string name="LO_lblBiometria">Acceda con Biometría</string>
    <string name="LO_btnIniciarSesion">Iniciar sesión</string>
    <string name="LO_lblCrearNuevaCuenta">Crear una nueva cuenta</string>
    <string name="LO_Toast_ErrorCampoUsuarioVacio">Debe introducir un Nombre de usuario</string>
    <string name="LO_Toast_ErrorCampoClaveVacio">Debe introducir la contraseña</string>
    <string name="LO_Toast_CredencialesCorrectas">Credenciales correctas</string>
    <string name="LO_Toast_CredencialesIncorrectas">Credenciales incorrectas</string>
    <string name="LO_Dialogo_tituloGuardarCredenciales">Guardar credenciales</string>
    <string name="LO_Dialogo_mensajeGuardarCredenciales">¿Deseas guardar tu usuario y contraseña para próximos accesos con huella?</string>
    <string name="LO_Dialogo_GuardarCredencialesOpcionSi">Si</string>
    <string name="LO_Dialogo_GuardarCredencialesOpcionNo">No</string>
    <string name="LO_Toast_Dialogo_GuardarCredencialesExito">Credenciales guardadas con éxito</string>
    <string name="LO_Dialogo_tituloSobrescribirCredenciales">Sobrescribir credenciales</string>
    <string name="LO_Dialogo_mensajeSobrescribirCredenciales">Ya existen credenciales guardadas. ¿Deseas sobrescribirlas con las nuevas?</string>
    <string name="LO_Dialogo_SobrescribirCredencialesOpcionSi">Si</string>
    <string name="LO_Dialogo_SobrescribirCredencialesOpcionNo">No</string>
    <string name="LO_Toast_Dialogo_SobrescribirCredencialesExito">Credenciales guardadas con éxito</string>
    <string name="LO_Toast_HuellaExito">Verificación biométrica exitosa</string>
    <string name="LO_Toast_HuellaError">Error</string>
    <string name="LO_Toast_HuellaFallo">Autenticación biométrica fallida</string>
    <string name="LO_DialogoBiometria_titulo">DiagnoSkin</string>
    <string name="LO_DialogoBiometria_subtitulo">Acceso Biométrico</string>
    <string name="LO_DialogoBiometria_mensaje">Pulse el sensor de huellas digitales</string>
    <string name="LO_ToastUsuarioBloqueado">Su cuenta de usuario ha sido bloqueada</string>
    <string name="LO_ToastConsultaAdministrador">Póngase en contacto con un administrador</string>
    <string name="LO_lbl_tituloNuevaCuentaUsuario">Crear nueva cuenta</string>
    <string name="LO_lbl_subTituloNuevaCuentaUsuario">Datos de Acceso</string>
    <string name="LO_lbl_preguntaNombreUsuario">¿Que nombre de usuario/a desea utilizar?*</string>
    <string name="LO_hintNombreUsuario">Nombre de usuario/a*</string>
    <string name="LO_lbl_preguntaNumColegiado">Introduzca su número de colegiado/a*</string>
    <string name="LO_hintNumColegiado">Num. colegiado/a*</string>
    <string name="LO_lbl_claveSegura">Escriba una contraseña segura*</string>
    <string name="LO_lbl_digitosClave">La contraseña ha de tener al menos 6 caracteres.</string>
    <string name="LO_hintClave">Contraseña*</string>
    <string name="LO_lbl_repitaClave">Repita la contraseña*</string>
    <string name="LO_lbl_camposObligatorios">Los campos con * son obligatorios.</string>
    <string name="LO_btn_AceptarDatosAcceso">Aceptar</string>
    <string name="LO_Toast_NombreUsuarioVacio">Debe introducir un nombre de usuario</string>
    <string name="LO_Toast_NumColegiadoVacio">Debe introducir su número de colegiado/a</string>
    <string name="LO_Toast_Clave1Vacia">Debe introducir una contraseña</string>
    <string name="LO_Toast_Clave2Vacia">Debe introducir la contraseña por segunda vez</string>
    <string name="LO_Toast_NombreUsuarioExiste">Nombre de usuario no disponible</string>
    <string name="LO_Toast_MedicoExiste">Ya existe un usuario con ese número de colegiado</string>
    <string name="LO_Toast_ClavesNoCoinciden">Las contraseñas introducidas no coinciden</string>
    <string name="LO_Toast_CleveMenos6caracteres">La contraseña ha de tener al menos 6 caracteres</string>
    <string name="LO_lbl_subTituloDatosPersonales">Datos Personales</string>
    <string name="LO_lbl_preguntaNombrePersonal">Escriba su nombre*</string>
    <string name="LO_hintNombrePersonal">Nombre*</string>
    <string name="LO_lbl_preguntaApellidos">Escriba sus apellidos*</string>
    <string name="LO_hintApellidos">Apellidos*</string>
    <string name="LO_lbl_preguntaEspecialidad">Indique su especialidad médica*</string>
    <string name="LO_hintEspecialidad">Especialidad*</string>
    <string name="LO_lbl_preguntaCentroDeTrabajo">Seleccione su centro de trabajo*</string>
    <string name="LO_lbl_preguntaTelefono">Introduzca su teléfono de contacto*</string>
    <string name="LO_hintTelefono">Teléfono de contacto*</string>
    <string name="LO_lbl_preguntaEmail">Introduzca su email*</string>
    <string name="LO_hintEmail">Email*</string>
    <string name="LO_btn_AceptarDatosPersonales">Aceptar</string>
    <string-array name="PA_spinner_especialidades_medicas">
        <item>Seleccione una especialidad*</item>
        <item>Médico de Familia</item>
        <item>Cardiólogo</item>
        <item>Dermatólogo</item>
        <item>Reumatólogo</item>
        <item>Pediatra</item>
        <item>Ginecólogo</item>
        <item>Neurólogo</item>
        <item>Oftalmólogo</item>
        <item>Otorrinolaringólogo</item>
        <item>Traumatólogo</item>
        <item>Endocrino</item>
        <item>Urólogo</item>
        <item>Neumólogo</item>
        <item>Oncólogo</item>
        <item>Psiquiatra</item>
        <item>Gastroenterólogo</item>
        <item>Nefrólogo</item>
        <item>Hematólogo</item>
        <item>Alergólogo</item>
    </string-array>
    <string name="LO_tituloSpiner">Seleccione su centro de trabajo*</string>
    <string name="LO_NoExistenCentrosMedicos">No existen Centros médicos disponibles</string>
    <string name="LO_Toast_debeSeleccionarCentroTranajo">Debe seleccionar un centro de trabajo</string>
    <string name="LO_Toast_ErrorNombre">Debe introducir su nombre</string>
    <string name="LO_Toast_ErrorApellidos">Debe introducir sus Apellidos</string>
    <string name="LO_Toast_ErrorEspecialidad">Debe seleccionar su especialidad médica</string>
    <string name="LO_Toast_ErrorCentro">Debe seleccionar su centro de trabajo</string>
    <string name="LO_Toast_ErrorTelefono">Debe introducir su teléfono de contacto</string>
    <string name="LO_Toast_ErrorEmail">Debe introducir su email</string>
    <string name="LO_ErrorExtraNoRecibido">No encontrado</string>
    <string name="LO_ErrorObtencionIdUsuario">No encontrado</string>
    <string name="LO_ErrorObtencionIdCentroMedico">No encontrado</string>
    <string name="LO_AltaExito">Usuario registrado correctamente</string>
    <string name="MP_btnPacientes">Consultar \n pacientes</string>
    <string name="MP_btnDiagnosticos">Realizar \n diagnóstico</string>
    <string name="MP_btnInformes">Emitir \n informe</string>
    <string name="MP_btn_estadisticas">Consultar \n estadísticas</string>
    <string name="PA_lbl_tituloPacientes">Pacientes</string>
    <string name="PA_lbl_subTituloFiltrar">Filtar por NUHSA</string>
    <string name="PA_hint_txt_filtroNuhsa">Introduzca un NUHSA</string>
    <string name="PA_btn_buscar">Buscar</string>
    <string name="PA_btn_NuevoPaciente">Nuevo paciente</string>
    <string name="PA_dlg_opcionSi">Si</string>
    <string name="PA_dlg_opcionNo">No</string>
    <string name="PA_dlg_titulo">Confirmar eliminación</string>
    <string name="PA_dlg_mensaje">¿Desea eliminar este paciente?</string>
    <string name="PA_toast_errorEliminacion">Se ha producido un error al intentar eliminar el paciente</string>
    <string name="PA_toast_NoEsAdmin">No cuenta con permisos de administrador</string>
    <string name="PA_lbl_idPaciente_tarjeta">Identificador: #</string>
    <string name="PA_lbl_apellidoNombre_tarjeta">Nombre:</string>
    <string name="PA_lbl_nuhsa_tarjeta">NUHSA:</string>
    <string name="PA_lbl_dni_tarjeta">DNI:</string>
    <string name="PA_lbl_idPaciente_datosDelPaciente">Datos del paciente #%1$s</string>
    <string name="PA_lbl_nombrePaciente_datosDelPaciente">Nombre: %1$s</string>
    <string name="PA_lbl_apellidosPaciente_datosDelPaciente">Apellidos: %1$s</string>
    <string name="PA_lbl_sexoPaciente_datosDelPaciente">Sexo: %1$s</string>
    <string name="PA_lbl_fechaNacPaciente_datosDelPaciente">Fecha de Nacimiento: %1$s</string>
    <string name="PA_lbl_nuhsaPaciente_datosDelPaciente">NUHSA: %1$s</string>
    <string name="PA_lbl_telefonoPaciente_datosDelPaciente">Teléfono: %1$s</string>
    <string name="PA_lbl_emailPaciente_datosDelPaciente">Email: %1$s</string>
    <string name="PA_lbl_dniPaciente_datosDelPaciente">DNI: %1$s</string>
    <string name="PA_lbl_direccionPaciente_datosDelPaciente">Dirección: %1$s</string>
    <string name="PA_lbl_localidadPaciente_datosDelPaciente">Localidad: %1$s</string>
    <string name="PA_lbl_provinciaPaciente_datosDelPaciente">Provincia: %1$s</string>
    <string name="PA_lbl_codigoPostalPaciente_datosDelPaciente">Código postal: %1$s</string>
    <string name="PA_btn_modificar_datosDelPaciente">Modificar</string>
    <string name="PA_btn_verDiagnosticos_datosDelPaciente">Ver diagnósticos</string>
    <string name="PA_btn_errorFechaNoDisponible">Fecha no disponible</string>
    <string name="PA_lbl_idPaciente_modificarPaciente">Paciente #%1$s</string>
    <string name="PA_lbl_nombrePaciente_modificarPaciente">Nombre*</string>
    <string name="PA_lbl_apellidosPaciente_modificarPaciente">Apellidos*</string>
    <string name="PA_lbl_sexoPaciente_modificarPaciente">Sexo*</string>
    <string name="PA_lbl_fechaNacPaciente_modificarPaciente">Fecha de Nacimiento*</string>
    <string name="PA_lbl_nuhsaPaciente_modificarPaciente">NUHSA*</string>
    <string name="PA_lbl_telefonoPaciente_modificarPaciente">Teléfono*</string>
    <string name="PA_lbl_emailPaciente_modificarPaciente">Email</string>
    <string name="PA_lbl_dniPaciente_modificarPaciente">DNI</string>
    <string name="PA_lbl_direccionPaciente_modificarPaciente">Dirección*</string>
    <string name="PA_lbl_localidadPaciente_modificarPaciente">Localidad*</string>
    <string name="PA_lbl_provinciaPaciente_modificarPaciente">Provincia*</string>
    <string name="PA_lbl_codigoPostalPaciente_modificarPaciente">Código postal*</string>
    <string name="PA_hint_nombrePaciente_modificarPaciente">Nombre</string>
    <string name="PA_hint_apellidosPaciente_modificarPaciente">Apellidos</string>
    <string name="PA_hint_sexoPaciente_modificarPaciente">Sexo</string>
    <string name="PA_hint_fechaNacPaciente_modificarPaciente">Fecha de Nacimiento</string>
    <string name="PA_hint_nuhsaPaciente_modificarPaciente">NUHSA</string>
    <string name="PA_hint_telefonoPaciente_modificarPaciente">Teléfono</string>
    <string name="PA_hint_emailPaciente_modificarPaciente">Email</string>
    <string name="PA_hint_dniPaciente_modificarPaciente">DNI</string>
    <string name="PA_hint_direccionPaciente_modificarPaciente">Dirección</string>
    <string name="PA_hint_localidadPaciente_modificarPaciente">Localidad</string>
    <string name="PA_hint_provinciaPaciente_modificarPaciente">Provincia</string>
    <string name="PA_hint_codigoPostalPaciente_modificarPaciente">Código postal</string>
    <string name="PA_btn_aceptar_modificarPaciente">Aceptar</string>
    <string name="PA_error_ModificarFecha">Error al modificar fecha</string>
    <string name="PA_toastErrorVacio_NombrePaciente">Debe introducir el nombre del paciente</string>
    <string name="PA_toastErrorVacio_apellidosPaciente">Debe introducir los apellidos del paciente</string>
    <string name="PA_toastErrorVacio_sexoPaciente">Debe seleccionar el sexo del paciente</string>
    <string name="PA_toastErrorVacio_nuhsaPaciente">Debe introducir el nuhsa del paciente</string>
</resources>