<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/ColorFondoLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/LO_lbl_tituloNuevaCuentaUsuarioPersonales"
        style="@style/TextosAzul_tam30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/LO_lbl_tituloNuevaCuentaUsuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_subTituloNuevaCuentaUsuario"
        style="@style/TextosGris_tam30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LO_lbl_subTituloDatosPersonales"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_tituloNuevaCuentaUsuarioPersonales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_preguntaNombrePersonal"
        style="@style/TextosAzul_tam16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LO_lbl_preguntaNombrePersonal"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_subTituloNuevaCuentaUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/LO_txt_NombrePersonal"
        style="@style/EditTextRedondeado"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/LO_hintNombrePersonal"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_preguntaNombrePersonal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_preguntaApellidos"
        style="@style/TextosAzul_tam16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/LO_lbl_preguntaApellidos"
        app:layout_constraintTop_toBottomOf="@id/LO_txt_NombrePersonal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/LO_txt_Apellidos"
        style="@style/EditTextRedondeado"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/LO_hintApellidos"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_preguntaApellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_preguntaEspecialidad"
        style="@style/TextosAzul_tam16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/LO_lbl_preguntaEspecialidad"
        app:layout_constraintTop_toBottomOf="@id/LO_txt_Apellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/LO_txt_Especialidad"
        style="@style/EditTextRedondeado"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/LO_hintEspecialidad"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_preguntaEspecialidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_preguntaCentroDeTrabajo"
        style="@style/TextosAzul_tam16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/LO_lbl_preguntaCentroDeTrabajo"
        app:layout_constraintTop_toBottomOf="@id/LO_txt_Especialidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/LO_spinner_centrosMedicos"
        style="@style/EditTextRedondeado"
        android:popupBackground="@drawable/rectangulo_blanco"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_preguntaCentroDeTrabajo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_preguntaTelefono"
        style="@style/TextosAzul_tam16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/LO_lbl_preguntaTelefono"
        app:layout_constraintTop_toBottomOf="@id/LO_spinner_centrosMedicos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/LO_txt_Telefono"
        style="@style/EditTextRedondeado"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/LO_hintTelefono"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_preguntaTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_preguntaEmail"
        style="@style/TextosAzul_tam16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/LO_lbl_preguntaEmail"
        app:layout_constraintTop_toBottomOf="@id/LO_txt_Telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/LO_txt_Email"
        style="@style/EditTextRedondeado"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/LO_hintEmail"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/LO_lbl_preguntaEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/LO_btn_AceptarDatosPersonales"
        style="@style/EstiloBotonesLogin"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/LO_btn_AceptarDatosPersonales"
        app:layout_constraintTop_toBottomOf="@id/LO_txt_Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LO_lbl_camposObligatorios2"
        style="@style/TextosGris_tam16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/LO_lbl_camposObligatorios"
        app:layout_constraintTop_toBottomOf="@id/LO_btn_AceptarDatosPersonales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
